baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__02_parser__lambda_throws_explicit.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_explicit_throws_match"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            THROWS_CLAUSE
              KW_THROWS "throws"
              TYPE_EXPR "string"
                WORD "string"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR
                  KW_THROW "throw"
                  STRING_LITERAL "boom"
                    QUOTE """
                    WORD "boom"
                    QUOTE """
              R_BRACE "}"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_explicit_throws_never_pure"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            THROWS_CLAUSE
              KW_THROWS "throws"
              TYPE_EXPR "never"
                WORD "never"
            BLOCK_EXPR "{ 42 }"
              L_BRACE "{"
              INTEGER_LITERAL "42"
              R_BRACE "}"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_explicit_throws_wider_than_body"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            THROWS_CLAUSE
              KW_THROWS "throws"
              TYPE_EXPR "string"
                WORD "string"
            BLOCK_EXPR "{ 42 }"
              L_BRACE "{"
              INTEGER_LITERAL "42"
              R_BRACE "}"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
