baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__02_parser__lambda_throws_infer.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_pure_lambda"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR "{ 42 }"
              L_BRACE "{"
              INTEGER_LITERAL "42"
              R_BRACE "}"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_throwing_lambda"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR
                  KW_THROW "throw"
                  STRING_LITERAL "boom"
                    QUOTE """
                    WORD "boom"
                    QUOTE """
              R_BRACE "}"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_throwing_int"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "string"
              WORD "string"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR "throw 42"
                  KW_THROW "throw"
                  INTEGER_LITERAL "42"
              R_BRACE "}"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_conditional_throw"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST
              L_PAREN "("
              PARAMETER
                WORD "n"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR
              L_BRACE "{"
              IF_EXPR
                KW_IF "if"
                PAREN_EXPR
                  L_PAREN "("
                  BINARY_EXPR "n < 0"
                    WORD "n"
                    LESS "<"
                    INTEGER_LITERAL "0"
                  R_PAREN ")"
                BLOCK_EXPR
                  L_BRACE "{"
                  THROW_STMT
                    THROW_EXPR
                      KW_THROW "throw"
                      STRING_LITERAL "negative"
                        QUOTE """
                        WORD "negative"
                        QUOTE """
                  R_BRACE "}"
              WORD "n"
              R_BRACE "}"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "(x)"
            L_PAREN "("
            WORD "x"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_multi_throw_types"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST
              L_PAREN "("
              PARAMETER
                WORD "n"
                COLON ":"
                TYPE_EXPR "int"
                  WORD "int"
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "string"
              WORD "string"
            BLOCK_EXPR
              L_BRACE "{"
              MATCH_EXPR
                KW_MATCH "match"
                L_PAREN "("
                WORD "n"
                R_PAREN ")"
                L_BRACE "{"
                MATCH_ARM
                  MATCH_PATTERN "0"
                    INTEGER_LITERAL "0"
                  FAT_ARROW "=>"
                  THROW_EXPR
                    KW_THROW "throw"
                    STRING_LITERAL "string error"
                      QUOTE """
                      WORD "string"
                      WORD "error"
                      QUOTE """
                  COMMA ","
                MATCH_ARM
                  MATCH_PATTERN "1"
                    INTEGER_LITERAL "1"
                  FAT_ARROW "=>"
                  THROW_EXPR "throw 1"
                    KW_THROW "throw"
                    INTEGER_LITERAL "1"
                  COMMA ","
                MATCH_ARM
                  MATCH_PATTERN "_"
                    WORD "_"
                  FAT_ARROW "=>"
                  STRING_LITERAL "ok"
                    QUOTE """
                    WORD "ok"
                    QUOTE """
                R_BRACE "}"
              R_BRACE "}"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "(x)"
            L_PAREN "("
            WORD "x"
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
