baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__02_parser__lambda_throws_violation.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_throws_never_but_throws"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            THROWS_CLAUSE
              KW_THROWS "throws"
              TYPE_EXPR "never"
                WORD "never"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR
                  KW_THROW "throw"
                  STRING_LITERAL "boom"
                    QUOTE """
                    WORD "boom"
                    QUOTE """
              R_BRACE "}"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_typed_lambda_throws_mismatch"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          COLON ":"
          TYPE_EXPR
            L_PAREN "("
            R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            THROWS_CLAUSE
              KW_THROWS "throws"
              TYPE_EXPR "string"
                WORD "string"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR "throw 42"
                  KW_THROW "throw"
                  INTEGER_LITERAL "42"
              R_BRACE "}"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_typed_lambda_annotation_underdeclares_body"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          COLON ":"
          TYPE_EXPR
            L_PAREN "("
            R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            THROWS_CLAUSE
              KW_THROWS "throws"
              TYPE_EXPR "string"
                WORD "string"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            THROWS_CLAUSE
              KW_THROWS "throws"
              TYPE_EXPR "string"
                WORD "string"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR "throw 42"
                  KW_THROW "throw"
                  INTEGER_LITERAL "42"
              R_BRACE "}"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
